--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:clipToPadding="false"
-	android:nestedScrollingEnabled="true"
-	app:fastScrollEnabled="true"
-	app:fastScrollHorizontalThumbDrawable="@drawable/thumb_scrollbar"
-	app:fastScrollHorizontalTrackDrawable="@android:color/transparent"
-	app:fastScrollVerticalThumbDrawable="@drawable/thumb_scrollbar"
-	app:fastScrollVerticalTrackDrawable="@android:color/transparent"
-	app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+	android:layout_height="match_parent">
+
+	<com.google.android.material.appbar.AppBarLayout
+		android:id="@+id/list_app_bar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		app:layout_constraintTop_toTopOf="parent">
+
+		<com.google.android.material.appbar.MaterialToolbar
+			android:id="@+id/list_toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize" />
+	</com.google.android.material.appbar.AppBarLayout>
+
+	<include
+		android:id="@+id/list_body"
+		layout="@layout/rv_linear"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/list_app_bar" />
+</androidx.constraintlayout.widget.ConstraintLayout>
