--- a/app/src/main/res/layout/rv_grid.xml
+++ b/app/src/main/res/layout/rv_grid.xml
@@ -6,5 +6,9 @@
 	android:layout_height="match_parent"
 	android:clipToPadding="false"
 	android:nestedScrollingEnabled="true"
-	android:scrollbars="vertical"
+	app:fastScrollEnabled="true"
+	app:fastScrollHorizontalThumbDrawable="@drawable/thumb_scrollbar"
+	app:fastScrollHorizontalTrackDrawable="@android:color/transparent"
+	app:fastScrollVerticalThumbDrawable="@drawable/thumb_scrollbar"
+	app:fastScrollVerticalTrackDrawable="@android:color/transparent"
 	app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
